@startuml
skinparam classAttributeIconSize 0
' left to right direction
caption Diagrama de entidades
namespace entidades {
    class Cliente {
        - String nome
        - String endereco
        + Cliente(nome:String)
        + getNome():String
        + setNome(nome:String):void
        + getEndereco():String
        + setEndereco(endereco:String ):void
        + getCidade():Cidade
        + setCidade(cidade:Cidade):void
        + toString():String
    }
    class Cidade {
        - String nome
        + Cidade(nome:String)
    }
    class Object {
        + toString():String
    }
    class Pokemon {
        - String nome
        + Pokemon(nome:String)
    }
    
    Cliente "-cidade  *" -> "1" Cidade
    Cliente --|>  Object
    Cliente "-listaPokemon  1" -> "*" Pokemon

}
namespace javax.swing {
    class JFrame {
    }
}
namespace telas {
    
    class TelaPrincipal {
        + TelaPrincipal()   
    }
    TelaPrincipal --|> javax.swing.JFrame
    TelaPrincipal --> controladores.TelaPrincipalControlador
}
namespace controladores {
    class TelaPrincipalControlador{
        + actionPerformed(e:ActionEvent):void
    }
    TelaPrincipalControlador ..|> java.awt.event.ActionListener
}
namespace java.awt.event {
    interface ActionListener{
        + actionPerformed(e:ActionEvent):void
    }
}
@enduml